--- a/chromeExtensions/export.html
+++ b/chromeExtensions/export.html
@@ -68,6 +68,7 @@
 		<script type="text/javascript" src="js/bootstrap.min.js" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/highlight.pack.js"></script>
 		<script type="text/javascript" src="js/clipboard.min.js"></script>
+		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/export.js"></script>
 	</body>
 </html>
