--- a/chromeExtensions/popup.html
+++ b/chromeExtensions/popup.html
@@ -13,7 +13,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="p-3 mb-2 bg-primary text-white">version: 0.0.4-dev</div>
+		<div class="p-3 mb-2 bg-primary text-white">version: 0.0.4</div>
 		<div class="alert alert-success" id="successDiv" role="alert" style="display: none;">
 				<span id="successMsg">successMsg</span>
 				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -69,6 +69,7 @@
 		
 		<script type="text/javascript" src="js/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/popup.js"></script>
 	</body>
 </html>
