Update to 0.0.9.BUILD-SNAPSHOT 使用 gists 进行多设备数据同步的技术预研

--- a/chromeExtensions/popup.html
+++ b/chromeExtensions/popup.html
@@ -13,7 +13,12 @@
 		</style>
 	</head>
 	<body>
-		<div class="p-3 mb-2 bg-primary text-white">version: 0.0.8</div>
+		<div class="form-inline mb-2">
+            <div class="form-group mx-sm-3 mb-2 text-black">
+                version: 0.0.9-dev
+            </div>
+            <a href="/sync.html" class="btn btn-outline-success mb-2">数据同步</a>
+		</div>
 		<div id="alertsDiv"></div>
 		<form class="form-inline">
 			<div class="form-group mx-sm-3 mb-2">
