--- a/chromeExtensions/spackAdmin.html
+++ b/chromeExtensions/spackAdmin.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
-		<title>管理</title>
+		<title>tabs工作区--工作区管理</title>
 		<style>
             body {
                 margin-top: 20px;
