--- a/chromeExtensions/export.html
+++ b/chromeExtensions/export.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/monokai-sublime.css" crossorigin="anonymous">
-		<title>导出</title>
+		<title>tabs工作区--数据导出</title>
 		<style type="text/css">
 			.snippet{
 				position: relative;
