--- a/chromeExtensions/popup.html
+++ b/chromeExtensions/popup.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="form-inline mb-2">
             <div class="form-group mx-sm-3 mb-2 text-black">
-                version: 0.0.9-dev
+                version: 0.0.9.BUILD-SNAPSHOT
             </div>
             <a href="/sync.html" class="btn btn-outline-success mb-2">数据同步</a>
 		</div>
